style.css
body {
    margin: 0;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    font-family: roboto, Arial, Helvetica, sans-serif;
}

.header {
    display: flex;
    justify-content: space-between;
}

.header, .hero-container, .info-container, .call-container,.quote-container{
    padding: 10px 250px;
}

.header-logo {
    color: #F9FAF8;
    font-size: 24px;
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    display: flex;
    gap: 15px;
}

.hero-container{
    display: flex;
    justify-content: space-between;
}

.header, .hero-container, .footer {
    background-color: #1F2937;
}

a {
    text-decoration: none;
}

a, .secondary-hero-text{
    color: #E5E7EB;
    font-size: 18px;
}

.primary-hero-text{
    color: #F9FAF8;
    font-size: 48px;
    font-weight: 900;
}

.hero-text{
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.hero-button{
    border: none;
    color: white;
    background-color: #3882F6;
    border-radius: 10px;
    padding: 8px 24px;
    width: 100px;
    height: 50px;
}

.hero-button:hover{
    background-color: white;
    color: #3882F6;
}

.hero-image{
    width: 400px;
    min-width: 250px;
}

.info-container{
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 30px;
}

.info-header{
    font-size: 36px;
    font-weight: 900;
    color: #1F2937;
}

.info-image{
    width: 150px;
    border-radius: 20px;
}

.info-card-container{
    display: flex;
    gap: 1px;
}

.info-card{
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
}

.quote-container{
    background-color: #E5E7EB;
    display: flex;
    flex-direction: column;
}

.quote{
    font-size: 36px;
    font-weight: 300;
    font-style: italic;
    color: #1F2937;
}

.quote-author{
    align-self: flex-end;
    font-size: 18px;
    color: #1F2937;
}

.call-container{
    display: flex;
    justify-content: center;
    align-items: center;
}

.call{
    background-color: #3882F6;
    color: #F9FAF8;
    border-radius: 5px;
    flex: 1;
    padding: 5px 100px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
}

.call-button{
    border: 2px solid white;
    color: white;
    background-color: #3882F6;
    border-radius: 10px;
    padding: 8px 24px;
    width: 100px;
    height: 50px;   
}

.call-button:hover{
    background-color: white;
    color: #3882F6;
}

.footer{
    display: flex;
    justify-content: center;
    color: #E5E7EB;
    padding: 20px;
}

